refactor recipes tests